# wordpress-ai-ops

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  SEO_PLAYBOOK.md  STATUS.md  pyproject.toml  requirements-google.txt
.ai/: active-task.json
.wp-ai-ops-state-live/: audit_log.jsonl  executed_tasks.json  openclaw_queue.jsonl  write_limits.json
consistency-output/: consistency_scan_20260216T214253.483986+0000.json  consistency_scan_20260216T214253.483986+0000.md  consistency_scan_20260216T215000.303559+0000.json  consistency_scan_20260216T215000.303559+0000.md  consistency_scan_20260216T215303.285097+0000.json  consistency_scan_20260216T215303.285097+0000.md  consistency_scan_20260216T215455.830858+0000.json  consistency_scan_20260216T215455.830858+0000.md
consistency-output-live/: consistency_scan_20260218T042845.059404+0000.json  consistency_scan_20260218T042845.059404+0000.md  seo_form_audit_2026-02-18.md  seo_frontend_audit_2026-02-18.json
data/: core_topic_pages.yaml  pages_to_create.yaml  seasonal_subpages.yaml
docs/: HANDOFF_TEMPLATE.md  SOP_Discovery.md  SOP_GoLive.md  SOP_MonthlySupport.md  SOP_Setup.md  SOP_Training.md
live-plan-newcastle/: weekly_report.json  weekly_report.md
live-plan-output/: weekly_report.json  weekly_report.md
openclaw-jobs/: 3f5fd3d9-5cb3-411f-a08c-30d67b91fcb8.job.json  a89f2f6d-4a1a-4d88-8b4c-7d8b5ff6d0e2.job.json
reports/: internal_link_audit_2026-04-06.json
scripts/: apply_skin.py  bulk_category_content.py  bulk_create_pages.py  bulk_faq_meta.py  bulk_faq_meta_progress.json  (+17 more)
(+1235 files in other folders)
